chrome/browser/resources/contextual_tasks/composebox.css
/* ... */
#composebox {
  --composebox-thumbnail-img-chip-size: 44px;
  --composebox-width: calc(100% - 30px); /* 15px on each side */
  --expanded-border-radius: 24px;
  --input-bottom-spacing: 16px;
  --inset-start-indent_: 15px;
  --text-input-left-spacing: 24px;
  --text-input-top-spacing: 16px;
  --composebox-context-menu-entrypoint-button-color: var(--color-composebox-voice-lens-button);

  box-shadow: none;
  display: block;
  inset-inline-start: var(--inset-start-indent_);
  position: relative;
  /* 100% - (right indent + left indent), up to max width. */
  width: calc(100% - (15px + var(--inset-start-indent_)));
  border: 1px solid var(--color-composebox-input-plate-outline);
  box-sizing: border-box;
}

:host(:not([is-zero-state])) #composebox::before {
  background: var(--search-background-color);
  border-radius: 24px;
  content: '';
  display: block;
  /* Expand past the bottom of the composebox.
   * Requires parent to have overflow hidden.
   */
  height: 40vh;
  position: absolute;
  width: 100%;
}

/* TODO(crbug.com/466201452): Check this logic
 * once Google.com AIM is RTL that this matches AIM.
 */

/* Make room for the side AIM menu panel. */
@media (min-width: 480px) {
  #composeboxContainer {
    /* Google.com uses 96px for indent column, and 5px left padding.
     * Aligns the input text of the composebox with the AIM thread.
     */
    --composebox-start-indent: 101px;
  }

  #composebox {
    --inset-start-indent_: var(--composebox-start-indent);
  }
}

/* W/more space, indent further to match AIM. */
@media (min-width: 1420px) {
  #composeboxContainer {
    /* At this width, indent column should be 280px + 5px left padding.
     * Google.com AIM has 20 other 36px columns as "inset end space",
     * with 20px gaps, which = 720px of cols, 21 * 20px = 420px of gaps.
     * Combined, this is 1140px of fixed space.
     * The first and last columns are 1fr, so the remaining fluid
     * space is (100% - 1140px) / 2 since we are splitting between the
     * 2 columns, which = 50% - 570px per flex column. Since at this
     * breakpoint, we need at least 280px of left indentation to match
     * the AIM thread, we do not start growing until flexible
     * indentation space > 280px of minimum left indentation.
     */
    --composebox-start-indent: max(285px, calc(50% - 570px));
  }

  #composebox {
    --inset-start-indent_: var(--composebox-start-indent);
  }
}

@media (min-width: 800px) {
  #composebox {
    max-width: var(--composebox-max-width);
  }
}

#composebox::part(thumbnail) {
  --thumbnail-size_: 28px;
  height: var(--thumbnail-size_);
  padding: 0;
  width: var(--thumbnail-size_);
}

:host([is-zero-state]) #composebox {
  --inset-start-indent_: 0px;
  bottom: auto;
  width: 100%;
}

:host([is-zero-state]) #composeboxContainer {
  background: transparent;
  display: block;
  position: relative;
}

:host([is-side-panel]) #composebox {
  --inset-start-indent_: 0;
  inset-inline-start: 15px;
  max-width: var(--composebox-max-width);
  min-width: 200px;
  /* 15px on each side -> 30px. */
  width: calc(100% - 30px);
}

@media (min-width: 1236px) {
  :host([is-side-panel]) #composebox {
    inset-inline-start: 96px;
  }
}

#composebox::part(error-scrim) {
  display: none;
}

#composebox::part(g-container) {
  max-height: 40vh;
  padding: 0;
}

#composebox::part(input-container) {
  transition: padding-top var(--emphasized-curve);
  transition-duration: var(--collapse-duration);
}

#composebox[expanding_]::part(input-container) {
  transition-duration: var(--expand-duration);
}

#composebox::part(carousel-divider) {
  display: none;
}

#composebox::part(carousel-container) {
  opacity: 0;
}

#composebox[show-file-carousel_][expanding_]::part(carousel-container) {
  opacity: 1;
  transition: var(--icon-entry-transition);
}

#composebox[show-file-carousel_]::part(carousel-container) {
  /* Give room for the close button in the top right. */
  --context-carousel-inline-end-spacing: 52px;
}

#composebox:not([expanding_])[show-file-carousel_]::part(cr-composebox-file-carousel) {
  pointer-events: none;
}

#composebox[show-file-carousel_][expanding_]::part(input-container) {
  padding-top: var(--carousel-height, 60px);
}

#composebox::part(icon-container) {
  display: none;
}

#composebox::part(input) {
  color: var(--color-composebox-font);
}

#composebox::part(input),
#composebox::part(smart-compose) {
  padding-inline-start: var(--g-input-left-spacing);
}

#composebox::part(input)::placeholder {
  color: revert;
}

#composebox::part(upload-container) {
  display: none;
}

#composebox::part(context-menu-entrypoint-icon) {
  --cr-icon-button-fill-color: var(--composebox-context-menu-entrypoint-button-color);
}

/* Controls cancel and submit buttons. */
#composebox::part(action-icon) {
  --cr-icon-button-hover-background-color: var(--color-composebox-hover);
}

#composebox::part(cancel-icon) {
  --cr-icon-button-fill-color: var(--color-composebox-cancel-button);
  /*
   * Inner icon size of cancel button == cancel button size,
   * unlike other buttons.
   */
  --cr-icon-button-size: var(--composebox-cancel-button-size);
  display: none;
  inset-inline-end: var(--cancel-button-inline-end);
  top: var(--cancel-button-top);
}

/* Only show when text is in there (when can submit). */
#composebox[submit-enabled_]::part(cancel-icon) {
  display: block;
}

#composebox::part(lens-icon) {
  --cr-icon-button-fill-color: var(--color-composebox-voice-lens-button);
  --cr-icon-button-icon-size: var(--icon-menu-icon-size);
  --cr-icon-button-size: var(--icon-menu-button-size);
  /* Override the expanding fade in animation to make the icon appear instantly. */
  animation: none;
  bottom: var(--composebox-icon-menu-bottom);
  display: block;
  inset-inline-end: var(--composebox-last-icon-inline-end);
  position: absolute;
  transition: ease-out 100ms;
}
/* ... */

