[145] "[contextual tasks] zero state spacing fix"
Original change's description:
> [contextual tasks] zero state spacing fix
> 
> * Zero state in side panel previously was not perfectly centered
> * Fix zero state margins so that is more robustly centered
> * Note: this does not include suggestions yet, as those are AIM-side
> 
> https://screencast.googleplex.com/cast/NDcyMjQzODgzODQxOTQ1NnwyOWYxNmEzZC03YQ
> 
> Bug: b:475541511
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7488760
> Commit-Queue: James Leung <jamesleung@google.com>
> Cr-Commit-Position: refs/heads/main@{#1572022}

Bug: 478201335
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7514784
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7632@{#903}
Cr-Branched-From: 0bbdf2913883391365383b0a5dfe7bf9fd1a5213-refs/heads/main@{#1568190}

--- a/chrome/browser/resources/contextual_tasks/composebox.css
+++ b/chrome/browser/resources/contextual_tasks/composebox.css
@@ -192,7 +192,7 @@
 }
 
 @media (min-width: 1236px) {
-  :host([is-side-panel]) #composebox {
+  :host([is-side-panel]:not([is-zero-state])) #composebox {
     inset-inline-start: 96px;
   }
 }
